--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
             <div class="portfolio-box">
                 <img src="images/game.png" alt="">
                 <div class="portfolio-layer">
-                    <h4>To-Do List</h4>
+                    <h4>Car Game</h4>
                     <p>Car Game website using HTML, CSS, JS </p>
                     <a href="https://shreyas-pawaskar.github.io/Car-Game/"><i class='bx bx-link-external'></i></a>
                 </div>
