--- a/index.html
+++ b/index.html
@@ -128,14 +128,14 @@
                 </div>
             </div>
 
-            <!-- <div class="portfolio-box">
+             <div class="portfolio-box">
                 <img src="images/portfolio2.png" alt="">
                 <div class="portfolio-layer">
-                    <h4>Starbucks</h4>
-                    <p>Landing page of Starbucks using HTML, CSS, JS the first Task given in Internship by #OCTANET   </p>
-                    <a href=""><i class='bx bx-link-external'></i></a>
+                    <h4>Golf</h4>
+                    <p>Home to a 46-bay, multi-tier, floodlit driving range, powered by Toptracer Range technology. Complimented by a practice green and bunker, coffee shop and American Golf Store. There truly is something for everyone as we also boast two outdoor 18-hole dinosaur themed crazy golf courses.   </p>
+                    <a href="https://shreyas-pawaskar.github.io/Golf/"><i class='bx bx-link-external'></i></a>
                 </div>
-            </div> -->
+            </div> 
 
             <div class="portfolio-box">
                 <img src="images/game.png" alt="">
