--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
             </div>
 
              <div class="portfolio-box">
-                <img src="images/portfolio2.png" alt="">
+                <img src="Screenshot 2024-06-23 113320.png" alt="">
                 <div class="portfolio-layer">
                     <h4>Golf</h4>
                     <p>Home to a 46-bay, multi-tier, floodlit driving range, powered by Toptracer Range technology. Complimented by a practice green and bunker, coffee shop and American Golf Store. There truly is something for everyone as we also boast two outdoor 18-hole dinosaur themed crazy golf courses.   </p>
